# opengl-101

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: MyGlWindow.cpp  MyGlWindow.h  ShaderInstaller.cpp  ShaderInstaller.h  main.cpp  my_gl_window.cpp  my_gl_window.h  shader_compiler.cpp  shader_compiler.h
src/utils/: IOTools.cpp  IOTools.h
